# HidrViewer

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Manual_HidrViewer.html  README.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_RUST.md  package-lock.json  package.json
.github/workflows/: release-windows.yml  security-audit.yml
frontend/: hidr_viewer.css  hidr_viewer.js  index.html
src-tauri/: Cargo.toml  about.hbs  about.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
